java.hints/test/unit/data/goldenfiles/org/netbeans/modules/java/hints/errors/MakeVariableFinalTest/testMakeVariableFinal2.pass
package org.netbeans.test.java.hints;

public class MakeVariableFinal {
    
    public static int main(final byte f) {
        byte g = 9;
        
        new Runnable() {
            public void run() {
                System.err.println(g);
                System.err.println(f);
            }
        };
    }
    
}
